--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   badges: ^3.1.2
   loading_animation_widget: ^1.3.0
+  provider: ^6.1.5+1
   # flutter_local_notifications: ^19.4.0
 
 dev_dependencies:
