--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   badges: ^3.1.2
   loading_animation_widget: ^1.3.0
   provider: ^6.1.5+1
+  image_picker: ^1.2.0
+  multi_select_flutter: ^4.1.3
   # flutter_local_notifications: ^19.4.0
 
 dev_dependencies:
