--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.5+1
   image_picker: ^1.2.0
   multi_select_flutter: ^4.1.3
+  fl_chart: ^1.0.0
   # flutter_local_notifications: ^19.4.0
 
 dev_dependencies:
